--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Majid | Web Portofolio</title>
-		<link rel="stylesheet" href="../style.css">
+		
 	</head>
 
 	<body>
-	<h1>GROUP 4 MEMBERS PORTFOLIO</h1>
+	<h1>UOS MULTIMEDIA STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -17,13 +16,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="Ahmed .html">Ahmed</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="yahia.html">yahia</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="Ahmed atif.html">Ahmed atif</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
@@ -31,14 +30,12 @@
 			</ul>
 		</nav>
 		<div class="about">
-		<h1>Majid Murshid Almheiri</h1>
+		<h1>Ahmed Atif</h1>
 		<section>
 			<p>
 				Hello,
-				My name is Majid Murshid Almheiri 
-				I’m a student at Sharjah University and i’m studying information technology multimedia media major 
-				I’m going to graduate at summer 2023, after finishing the work placement at a governmental agency.
-				My hobbies are playing padel tennis, horse riding .
+			My Name is Ahmed atif i'm a student at university of sharjah in this course we are learning how to design websites using Html and css and javascript now in my project i will show you my favourite pictures , I'm willing to present my website project with you hope you like it
+			</p>
 			</p>
 			<ul class="image">
 				<li>
