--- a/muaz.html
+++ b/muaz.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-	<h1>GROUP 4 MEMBERS PORTFOLIO</h1>
+	<h1> UOS MULTIMEDIA STUDENT</h1>
 		<nav>
 			<ul>
 				<li>
@@ -17,13 +17,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="ahmed.html">Abdalla</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="Ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
@@ -35,8 +35,8 @@
 		<section>
 			<p>
 				My name is Muaz khalid 
-				I am a multimedia student at university of sharjah, i am now on my fourth semester.
-				My reason for chosing this career is because i love animation movies and would like to be animator in the future .. with this career I can design, program and create my own animation content, I already familiar with some graphic design programs such as Photoshop and illustrator  .. i created some logos before for computer science major you will find it bellow, I believe with this job I could use my skills and these programs to make my ideas come to life.
+				I am an IT multimedia student at university of sharjah and this is my third year.
+				I chose to study Multimedia because I am very passionate about the visual communication specially animation industry  and I would like to work as an  animator in the near future Inshallah.. the special thing about this career is the huge space for creativity which I like the most,  about the experience that I have I think I am familiar with graphic design basic concept and how to use the tools  such as Photoshop and illustrator,  I  believe with this career I can develop my skills and knowledge to achieve  the best and benefit other people.
 			</p>
 			<ul class="image">
 				<li>
