--- a/abdelaziz.html
+++ b/abdelaziz.html
@@ -18,13 +18,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="Ahmed.html">Abdalla</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="Yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="Ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
