--- a/yahia.html
+++ b/yahia.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Ali | Wep Portofolio</title>
+		<title>Yahia | Wep Portofolio</title>
 		<link rel="stylesheet" href="../style.css">
 	</head>
 
 	<body>
-	<h1>GROUP 4 MEMBERS PORTFOLIO</h1>
+	<h1>UOS COMPUTER SCIENCE STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -17,13 +17,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="Ahmed.html">Abdalla</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
@@ -31,15 +31,10 @@
 			</ul>
 		</nav>
 		<div class="about">
-		<h1>Ali Mohammed Ali Alnaqbi</h1>
+		<h1>Yahia Ayman</h1>
 		<section>
 			<p>
-				Hello,
-				My name is Ali Mohammed Ali Alnaqbi and I am 23 years old, I am a
-				student at the University of Sharjah, My student ID is U19200442.
-				My major It Multimedia, and I study this semester Interactive
-				Multimedia and I benefited a lot from it in this course. My ambition is
-				to get high grades.
+				Hello, I am Yahia Ayman. A Computer Science Junior student at University of Sharjah. For my whole life I have always been interested in computers and electronic devices. Often tinkering with programs and how they work. As I grew older, I learned more about computer science and programming, which lead to my interest in the computer science college. I am largely interested in web development as well as futuristic AI applications. I hope in the future that I am able to work on exciting projects with large companies that can allow me to improve my skill as well as help others.
 			</p>
 			<ul class="image">
 				<li>
