--- a/abdelaziz.html
+++ b/abdelaziz.html
@@ -21,10 +21,10 @@
 					<a href="Ahmed.html">Abdalla</a>
 				</li>
 				<li>
-					<a href="Yahia.html">Ali</a>
+					<a href="yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="Ahmed atif.html">Majid</a>
+					<a href="ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
