--- a/Ahmed.html
+++ b/Ahmed.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Abdulla | Web Portofolio</title>
+		<title>Ahmed| Web Portofolio</title>
 		<link rel="stylesheet" href="../style.css">
 	</head>
 
@@ -17,13 +17,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="Ahmed.html">Abdalla</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
@@ -31,15 +31,10 @@
 			</ul>
 		</nav>
 		<div class="about">
-		<h1>Abdalla AlAli</h1>
+		<h1>Ahmed Rayan</h1>
 		<section>
 			<p>
-				Hello,
-				My name is Abdalla AlAli
-				I am student at Sharjah University and I am studying ITMM major .
-				I am going to graduate in this summer Insha’Allah after finishing the work placement which will be at Sharjah Municipality in 2022
-				My hobbies are swimming, fast walking and programming in the computer
-
+				Hello,My name is Ahmed Rayan Kaidi, I am 19 years old, i study multimedia in the college of computing,i like programming and especially designing webs using it. I like playing video games which made me want to learn how to program them.
 			</p>
 			<ul class="image_center">
 				<li>
