--- a/muaz.html
+++ b/muaz.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-	<h1> UOS MULTIMEDIA STUDENT</h1>
+	<h1> UOS COMPUTER SCIENCE STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -23,7 +23,7 @@
 					<a href="yahia.html">Ali</a>
 				</li>
 				<li>
-					<a href="Ahmed atif.html">Majid</a>
+					<a href="ahmed atif.html">Majid</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
