--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-	<h1>UOS MULTIMEDIA STUDENTS</h1>
+	<h1>UOS COMPUTER SCIENCE STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -16,7 +16,7 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="Ahmed .html">Ahmed</a>
+					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
 					<a href="yahia.html">yahia</a>
