--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<h1>GROUP 4 MEMBERS PORTFOLIO</h1>
+		<h1>UOS COMPUTER SCIENCE STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -17,13 +17,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="abdulla.html">Abdalla</a>
+					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="ali.html">Ali</a>
+					<a href="yahia.html">Yahia</a>
 				</li>
 				<li>
-					<a href="majid.html">Majid</a>
+					<a href="ahmed atif.html">Ahmed</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
