--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -22,7 +22,7 @@
 					<a href="yahia.html">yahia</a>
 				</li>
 				<li>
-					<a href="Ahmed atif.html">Ahmed atif</a>
+					<a href="Ahmed atif.html">Ahmed</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
