--- a/abdelaziz.html
+++ b/abdelaziz.html
@@ -18,13 +18,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="Ahmed.html">Abdalla</a>
+					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="yahia.html">Ali</a>
+					<a href="yahia.html">yahia</a>
 				</li>
 				<li>
-					<a href="ahmed atif.html">Majid</a>
+					<a href="ahmed atif.html">Ahmed</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
