--- a/muaz.html
+++ b/muaz.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-	<h1> UOS COMPUTER SCIENCE STUDENTS</h1>
+	<h1>UOS COMPUTER SCIENCE STUDENTS</h1>
 		<nav>
 			<ul>
 				<li>
@@ -17,13 +17,13 @@
 					<a href="abdelaziz.html">Abdelaziz</a>
 				</li>
 				<li>
-					<a href="ahmed.html">Abdalla</a>
+					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="yahia.html">Ali</a>
+					<a href="yahia.html">yahia</a>
 				</li>
 				<li>
-					<a href="ahmed atif.html">Majid</a>
+					<a href="ahmed atif.html">Ahmed</a>
 				</li>
 				<li>
 					<a href="muaz.html">Muaz</a>
