--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Web Portofolio</title>
+		<title>computer science</title>
 		<link rel="stylesheet" href="../style.css">
 	</head>
 
@@ -36,7 +36,7 @@
 		<section class="center">
 			<h2 >About The Group</h2>
 			<p>
-				This website is about the students whom are currently attending the University of Sharjah, Interactive Multimedia course.<br> It will include their portfolios and some informations about them including their major.
+				This website is about the students whom are currently doing computer science program at University of Sharjah.<br>
 			</p>
 			<ul class="image">
 				<li>
