--- a/yahia.html
+++ b/yahia.html
@@ -20,7 +20,7 @@
 					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="yahia.html">yahia</a>
+					<a href="yahia.html">Yahia</a>
 				</li>
 				<li>
 					<a href="ahmed atif.html">Ahmed</a>
