--- a/yahia.html
+++ b/yahia.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Yahia | Wep Portofolio</title>
-		<link rel="stylesheet" href="../style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -36,22 +36,26 @@
 			<p>
 				Hello, I am Yahia Ayman. A Computer Science Junior student at University of Sharjah. For my whole life I have always been interested in computers and electronic devices. Often tinkering with programs and how they work. As I grew older, I learned more about computer science and programming, which lead to my interest in the computer science college. I am largely interested in web development as well as futuristic AI applications. I hope in the future that I am able to work on exciting projects with large companies that can allow me to improve my skill as well as help others.
 			</p>
+			<div class="center">
+				<a href="project_stage4_AshourYahia_U20100293.html"><button class="game-btn" type="button" >Go play the word game!</button></a>
+			</div>
 			<ul class="image">
 				<li>
-					<img src="../images/ali/1.png" alt="image1">
+					<img src="..\websitetest-main\yahia\1.png" alt="image1">
 				</li>
 				<li>
-					<img src="../images/ali/2.png" alt="image2">
+					<img src="..\websitetest-main\yahia\2.png" alt="image2">
 				</li>
 				<li>
-					<img src="../images/ali/3.png" alt="image3">
+					<img src="..\websitetest-main\yahia\3.png" alt="image3">
 				</li>
 				<li>
-					<img src="../images/ali/4.png" alt="image4">
+					<img src="..\websitetest-main\yahia\4.png" alt="image4">
 				</li>
 			</ul>
 		</section>
 		</div>
+		
 		<footer class="footer_center">
 		<p>
 			Contact Us: +971*********
