--- a/yahia.html
+++ b/yahia.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Yahia | Wep Portofolio</title>
+		<title>Yahia | Web Portofolio</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
@@ -11,7 +11,7 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html" class="active">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
 					<a href="abdelaziz.html">Abdelaziz</a>
@@ -20,7 +20,7 @@
 					<a href="Ahmed.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="yahia.html">Yahia</a>
+					<a href="yahia.html" class="active">Yahia</a>
 				</li>
 				<li>
 					<a href="ahmed atif.html">Ahmed</a>
@@ -41,16 +41,16 @@
 			</div>
 			<ul class="image">
 				<li>
-					<img src="..\websitetest-main\yahia\1.png" alt="image1">
+					<img src="./yahia/1.png" alt="image1">
 				</li>
 				<li>
-					<img src="..\websitetest-main\yahia\2.png" alt="image2">
+					<img src="./yahia/2.png" alt="image2">
 				</li>
 				<li>
-					<img src="..\websitetest-main\yahia\3.png" alt="image3">
+					<img src="./yahia/3.png" alt="image3">
 				</li>
 				<li>
-					<img src="..\websitetest-main\yahia\4.png" alt="image4">
+					<img src="./yahia/4.png" alt="image4">
 				</li>
 			</ul>
 		</section>
