--- a/muaz.html
+++ b/muaz.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Muaz | Web Portofolio</title>
-		<link rel="stylesheet" href="../Muaz.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
