--- a/yahia.html
+++ b/yahia.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Yahia | Web Portofolio</title>
+		<title>Yahia | Wep Portofolio</title>
 		<link rel="stylesheet" href="style.css">
+		<style>
+			.change-color:hover {
+				color: #416274;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -31,7 +36,7 @@
 			</ul>
 		</nav>
 		<div class="about">
-		<h1>Yahia Ayman</h1>
+		<h1 class="change-color" title="Hello :)">Yahia Ayman</h1>
 		<section>
 			<p>
 				Hello, I am Yahia Ayman. A Computer Science Junior student at University of Sharjah. For my whole life I have always been interested in computers and electronic devices. Often tinkering with programs and how they work. As I grew older, I learned more about computer science and programming, which lead to my interest in the computer science college. I am largely interested in web development as well as futuristic AI applications. I hope in the future that I am able to work on exciting projects with large companies that can allow me to improve my skill as well as help others.
