--- a/muaz.html
+++ b/muaz.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8">
 		<title>Muaz | Web Portofolio</title>
 		<link rel="stylesheet" href="style.css">
+		<style>
+			change-color:hover {
+				color: #416274; 
+			<style>	
 	</head>
 
 	<body>
