--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		
+		<title>Ahmed| Web Portofolio</title>
+		<link rel="stylesheet" href="../style.css">
 	</head>
+
 
 	<body>
 	<h1>UOS COMPUTER SCIENCE STUDENTS</h1>
