--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ahmed| Web Portofolio</title>
-		<link rel="stylesheet" href="../style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 
