--- a/muaz.html
+++ b/muaz.html
@@ -40,7 +40,7 @@
 				I chose to study Multimedia because I am very passionate about the visual communication specially animation industry  and I would like to work as an  animator in the near future Inshallah.. the special thing about this career is the huge space for creativity which I like the most,  about the experience that I have I think I am familiar with graphic design basic concept and how to use the tools  such as Photoshop and illustrator,  I  believe with this career I can develop my skills and knowledge to achieve  the best and benefit other people.
 			</p>
 			<div class="center">
-				<a href="Muaz puzzel.html"><button class="game-btn" type="button" >My puzzel</button></a>
+				<a href="Muaz puzzle.html"><button class="game-btn" type="button" >My puzzel</button></a>
 			</div>
 			<ul class="image">
 				<li>
