--- a/Muaz puzzle.html
+++ b/Muaz puzzle.html
@@ -5,7 +5,7 @@
 <label class="selectBG" for="cage">Cage</label>
 <label class="selectBG" for="cageAnim">Cage Dance</label>
 <label class="selectBG" for="cageKitten">Cage Kitten</label>
-
+<link rel="stylesheet" href="Muaz puzzle.css">
 <input type="radio" id="a-up" name="a-vertical">
 <input type="radio" id="a-middle" name="a-vertical" checked>
 <input type="radio" id="a-down" name="a-vertical">
