--- a/Muaz puzzle.html
+++ b/Muaz puzzle.html
@@ -54,7 +54,7 @@
 <input type="radio" id="h-left" name="h-horazontal" checked>
 <input type="radio" id="h-center" name="h-horazontal">
 <input type="radio" id="h-right" name="h-horazontal">
-
+<link rel="stylesheet" href="Muaz puzzle.css">
 <div class="board">
   <div class="peice-a">
     <label for="a-up"></label>
