Added images to home page

--- a/index.html
+++ b/index.html
@@ -31,28 +31,26 @@
 			</ul>
 		</nav>
 		<div class="image">
-			<img src="../images/home_image.JPG" alt="Home Image">
+			<img src="./homeimages/mainimage.jpg" alt="Home Image">
 		</div>
 		<section class="center">
 			<h2 >About The Group</h2>
 			<p>
 				This website is about the students whom are currently doing computer science program at University of Sharjah.<br>
 			</p>
+			<br><hr><br>
 			<ul class="image">
 				<li>
-					<img src="../images/01.jpg" alt="image">
+					<img src="./homeimages/1.jpg" alt="image">
 				</li>
 				<li>
-					<img src="../images/02.png" alt="image">
+					<img src="./homeimages/2.jpg" alt="image">
 				</li>
 				<li>
-					<img src="../images/03.jpg" alt="image">
+					<img src="./homeimages/3.png" alt="image">
 				</li>
 				<li>
-					<img src="../images/04.jpg" alt="image">
-				</li>
-				<li>
-					<img src="../images/05.jpg" alt="image">
+					<img src="./homeimages/4.jpg" alt="image">
 				</li>
 			</ul>
 		</section>
