added table content

--- a/yahia.html
+++ b/yahia.html
@@ -8,6 +8,28 @@
 			.change-color:hover {
 				color: #416274;
 			}
+			
+			table, th, td {
+				border: 2px solid black;
+				border-collapse: collapse;
+				padding: 5px;
+				margin: 15px auto;
+			}
+			
+			.tablelink {
+				color: light blue;
+				text-decoration: none;
+			}
+			
+			.tablelink:hover {
+				color: blue;
+				text-decoration: underline;
+			}
+			
+			.tablelink:visited {
+				color: red;
+			}
+			
 		</style>
 	</head>
 
@@ -43,6 +65,36 @@
 			</p>
 			<div class="center">
 				<a href="project_stage4_AshourYahia_U20100293.html"><button class="game-btn" type="button" >Go play the word game!</button></a>
+			</div>
+			<br>
+			<div class="center">
+				<h2>Great resources for programming</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Link</th>
+							<th>Type</th>
+							<th>For who?</th>
+						</tr>							
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="https://code.visualstudio.com/" class="tablelink">Visual Studio Code</a></td>
+							<td>Compiler/IDE</td>
+							<td>For all C/C++/C# developers</td>
+						</tr>
+						<tr>
+							<td><a href="https://github.com/" class="tablelink">Github</a></td>
+							<td>Version Control System</td>
+							<td>Intermediate+ developers working on teams</td>
+						</tr>	
+						<tr>
+							<td><a href="https://www.geeksforgeeks.org/" class="tablelink">Geeks for Geeks</a></td>
+							<td>Tutorials/help</td>
+							<td>For beginner developers looking for code help</td>
+						</tr>					
+					</tbody>
+				</table>
 			</div>
 			<ul class="image">
 				<li>
