--- a/abdelaziz.html
+++ b/abdelaziz.html
@@ -40,19 +40,19 @@
 			   I’m 21 years old, I live in Sharjah, United Arab Emirates. I’m freshman student in IT &amp; Multimedia bachelor degree In University of Sharjah. I look forward to be a professional programmer and I am consuming my time in university to learn and get more skills. My hobbies are working out, watching films, and playing chess.</p>
 			<ul class="image">
 				<li>
-					<img src="../images/abdelaziz/1.jpg" alt="image1">
+					<img src="./abdelaziz/1.jpg" alt="image1">
 				</li>
 				<li>
-					<img src="../images/abdelaziz/2.jpg" alt="image2">
+					<img src="./abdelaziz/2.jpg" alt="image2">
 				</li>
 				<li>
-					<img src="../images/abdelaziz/3.png" alt="image3">
+					<img src="./abdelaziz/3.png" alt="image3">
 				</li>
 				<li>
-					<img src="../images/abdelaziz/4.jpg" alt="image4">
+					<img src="./abdelaziz/4.jpg" alt="image4">
 				</li>
 				<li>
-					<img src="../images/abdelaziz/5.jpg" alt="image5">
+					<img src=./abdelaziz/5.jpg" alt="image5">
 				</li>
 			</ul>
 		</section>
