--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -47,7 +47,7 @@
 					<img src="../images/majid/2.jpg" alt="image2">
 				</li>
 				<li>
-					<img src="../images/majid/3.jpg" alt="image3">
+					<img src="./ahmed atif/3.jpg" alt="image3">
 				</li>
 				<li>
 					<img src="../images/majid/4.jpg" alt="image4">
