--- a/ahmed atif.html
+++ b/ahmed atif.html
@@ -41,22 +41,22 @@
 			</p>
 			<ul class="image">
 				<li>
-					<img src="../images/majid/1.jpg" alt="image1">
+					<img src="ahmed atif/1.jpg" alt="image1">
 				</li>
 				<li>
-					<img src="../images/majid/2.jpg" alt="image2">
+					<img src="ahmed atif/2.jpg" alt="image2">
 				</li>
 				<li>
-					<img src="./ahmed atif/3.jpg" alt="image3">
+					<img src="ahmed atif/3.jpg" alt="image3">
 				</li>
 				<li>
-					<img src="../images/majid/4.jpg" alt="image4">
+					<img src="ahmed atif/4.jpg" alt="image4">
 				</li>
 				<li>
-					<img src="../images/majid/5.jpg" alt="image5">
+					<img src="ahmed atif/5.jpg" alt="image5">
 				</li>
 				<li>
-					<img src="../images/majid/6.jpg" alt="image6">
+					<img src="ahmed atif/6.jpg" alt="image6">
 				</li>
 			</ul>
 		</section>
