--- a/Ahmed.html
+++ b/Ahmed.html
@@ -38,7 +38,7 @@
 			</p>
 			<ul class="image_center">
 				<li>
-					<img src="../images/abdulla/1.jpg" alt="image1">
+					<img src="/1.jpg" alt="image1">
 				</li>
 			</ul>
 		</section>
