--- a/Ahmed.html
+++ b/Ahmed.html
@@ -38,7 +38,7 @@
 			</p>
 			<ul class="image_center">
 				<li>
-					<img src="/5.jpg" alt="image1">
+					<img src="abdelaziz/IMG-20221101-WA0016.jpg" alt="image1">
 				</li>
 			</ul>
 		</section>
