--- a/muaz.html
+++ b/muaz.html
@@ -12,7 +12,7 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html" class="active">Home</a>
+					<a href="index.html" >Home</a>
 				</li>
 				<li>
 					<a href="abdelaziz.html">Abdelaziz</a>
@@ -27,7 +27,7 @@
 					<a href="ahmed atif.html">Ahmed</a>
 				</li>
 				<li>
-					<a href="muaz.html">Muaz</a>
+					<a href="muaz.html"class="active">Muaz</a>
 				</li>
 			</ul>
 		</nav>
