--- a/abdelaziz.html
+++ b/abdelaziz.html
@@ -12,10 +12,10 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html" class="active">Home</a>
+					<a href="index.html" >Home</a>
 				</li>
 				<li>
-					<a href="abdelaziz.html">Abdelaziz</a>
+					<a href="abdelaziz.html"class="active">Abdelaziz</a>
 				</li>
 				<li>
 					<a href="Ahmed.html">Ahmed</a>
